kubernetes/base/flasher/admin/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: admin
spec:
  replicas: 1
  selector:
    matchLabels:
      app: admin
  template:
    metadata:
      labels:
        app: admin
    spec:
      # TODO add volume for caching build
      volumes:
        - name: files
          emptyDir: {}
        - name: nginx-conf-d-volume
          configMap:
            name: nginx-conf-d-config
      imagePullSecrets:
        - name: gitlab-registry
      containers:
        - image: library/nginx:1.18-alpine
          imagePullPolicy: IfNotPresent
          name: admin-nginx
          command:
            - "nginx"
            - "-g"
            - "daemon off;"
          volumeMounts:
            - name: nginx-conf-d-volume
              mountPath: /etc/nginx/conf.d
            - mountPath: /usr/share/nginx/html
              name: files
          ports:
            - name: http-admin
              containerPort: 80
          readinessProbe:
            httpGet:
              port: 80
              path: /
        - image: admin
          imagePullPolicy: Always
          name: admin-builder
          volumeMounts:
            - mountPath: /usr/share/nginx/html
              name: files
