kubernetes/base/flasher/admin/service.yml
apiVersion: v1
kind: Service
metadata:
  name: admin
  labels:
    app: admin
    service: admin
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
  selector:
    app: admin
